@@ -322,7 +322,7 @@ int MatchMatrixFromFile(CMatch *I,char *fname,int quiet)
 }
 
 int MatchAlign(CMatch *I,float gap_penalty,float ext_penalty,
-                 int max_gap,int max_skip,int quiet)
+               int max_gap,int max_skip,int quiet)
 {
   PyMOLGlobals *G=I->G;
   unsigned int dim[2];
@@ -500,6 +500,7 @@ int MatchAlign(CMatch *I,float gap_penalty,float ext_penalty,
     }
     I->score = mxv;
     I->n_pair = cnt;
+    printf("DEBUG %d\n",I->n_pair);
     VLASize(I->pair,int,(p-I->pair));
     FreeP(score);
     FreeP(point);
