@@ -1960,6 +1960,7 @@ void SettingGenerateSideEffects(PyMOLGlobals *G,int index,char *sele,int state)
   case cSetting_half_bonds:
   case cSetting_stick_transparency:
   case cSetting_line_stick_helper:
+  case cSetting_hide_long_bonds:
     ExecutiveInvalidateRep(G,inv_sele,cRepLine,cRepInvRep);
     ExecutiveInvalidateRep(G,inv_sele,cRepCyl,cRepInvRep);
     SceneChanged(G);
@@ -3500,6 +3501,7 @@ void SettingInitGlobal(PyMOLGlobals *G,int alloc,int reset_gui)
   set_b(I,cSetting_auto_copy_images,0);
   set_i(I,cSetting_moe_separate_chains,-1);
   set_b(I,cSetting_transparency_global_sort, 0);
+  set_b(I,cSetting_hide_long_bonds,0);
 
 }
 
